[gd_scene load_steps=22 format=3 uid="uid://cjbda0fdx38c4"]

[ext_resource type="Script" uid="uid://bl8iy8s43qakx" path="res://Scripts/CardFight/FanCardHandContainer.gd" id="1_8e13a"]
[ext_resource type="Script" uid="uid://c72jhtq31f4w3" path="res://Scripts/CardFight/card_fight_ui.gd" id="1_u6pkr"]
[ext_resource type="AudioStream" uid="uid://i74iqvk0qddm" path="res://Assets/Sounds/CardSound.mp3" id="2_c6mlu"]
[ext_resource type="Texture2D" uid="uid://bwbllo7gspe55" path="res://Assets/UIPiecies/Screen/ButtonCover3_FullQuality.png" id="2_fje4l"]
[ext_resource type="Texture2D" uid="uid://ben2ixlvxo42b" path="res://Assets/UIPiecies/Screen/Button10_Camera 1_FullQuality.png" id="4_c6mlu"]
[ext_resource type="PackedScene" uid="uid://cy1ohrkbe4n1e" path="res://Scenes/Cards/SegmentedBar/segmented_hp.tscn" id="4_fje4l"]
[ext_resource type="AudioStream" uid="uid://ccyskr8jt1vq6" path="res://Assets/Sounds/cash2.mp3" id="5_anehw"]
[ext_resource type="Texture2D" uid="uid://cfwm15q52gd55" path="res://Assets/UIPiecies/Screen/Button10_Camera 1_FullQuality_pressed.png" id="5_flupv"]
[ext_resource type="Theme" uid="uid://de7fb8k462lxb" path="res://Theme/PopTheme.tres" id="5_lleca"]
[ext_resource type="Texture2D" uid="uid://bxkdjy0yeuig4" path="res://Assets/UIPiecies/Screen/Button5_Camera 1_FullQuality.png" id="5_vuvmf"]
[ext_resource type="AudioStream" uid="uid://81kxs8jf66hv" path="res://Assets/Sounds/BeepConfirm.mp3" id="6_anehw"]
[ext_resource type="Texture2D" uid="uid://2gkqio6ka74a" path="res://Assets/UIPiecies/Screen/Button5_Camera 1_FullQuality_Pressed.png" id="6_iexgv"]
[ext_resource type="Texture2D" uid="uid://kxagwb8gq1pm" path="res://Assets/UIPiecies/Screen/Button2_Camera 1_FullQuality.png" id="7_vuvmf"]
[ext_resource type="AudioStream" uid="uid://c43kn36ymgltb" path="res://Assets/Sounds/BeepReject.mp3" id="7_xj5gt"]
[ext_resource type="Texture2D" uid="uid://byy7qb0rfhypw" path="res://Assets/UIPiecies/Screen/Button2_Camera 1_FullQuality_Pressed.png" id="8_iexgv"]
[ext_resource type="AudioStream" uid="uid://djpdmpewc6sg" path="res://Assets/Sounds/BeepLong.mp3" id="8_xj5gt"]
[ext_resource type="AudioStream" uid="uid://bj6ftgg07o4t0" path="res://Assets/Sounds/CardIn.mp3" id="12_rpmjo"]
[ext_resource type="AudioStream" uid="uid://8pdqtyhjkcvr" path="res://Assets/Sounds/CardOut2.mp3" id="13_w3ip8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vuvmf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iexgv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbx4b"]
draw_center = false
border_width_top = 8
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_detail = 1

[node name="CardFightExternalUI" type="Control" node_paths=PackedStringArray("PlayerCardPlecement", "EnergyBar", "ReservesBar", "PlayCardInsert", "DrawCardInsert", "DiscardInsert", "PlayerCardPlacementInputBlocker")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_u6pkr")
PlayerCardPlecement = NodePath("PlayerCardPlacement")
EnergyBar = NodePath("w")
ReservesBar = NodePath("SegmentedHP2")
PlayCardInsert = NodePath("PlayInsert/Control")
DrawCardInsert = NodePath("DrawInsert/Control")
DiscardInsert = NodePath("DiscardInsert/Control")
CardInsertSound = ExtResource("13_w3ip8")
CardOutSound = ExtResource("12_rpmjo")
CardDiscardSound = ExtResource("5_anehw")
CardSound = ExtResource("2_c6mlu")
BeepSound = ExtResource("6_anehw")
BeepNoSound = ExtResource("7_xj5gt")
BeepLong = ExtResource("8_xj5gt")
PlayerCardPlacementInputBlocker = NodePath("PlayerCardPlacementInputBlocker")

[node name="ScreenFrame2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 38.045)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1016.0
offset_top = 13.0
offset_right = -13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_fje4l")
expand_mode = 1

[node name="PlayerCardPlacement" type="Container" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -483.0
offset_top = -228.0
offset_right = 196.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_force_pass_scroll_events = false
script = ExtResource("1_8e13a")
max_rotation_degrees = 25.0
max_cards = 8
metadata/_custom_type_script = "uid://bl8iy8s43qakx"

[node name="PlayerCardPlacementInputBlocker" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -483.0
offset_top = -293.0
offset_right = 196.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_force_pass_scroll_events = false

[node name="w" parent="." instance=ExtResource("4_fje4l")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1067.0
offset_top = 509.0
offset_right = 1106.0
offset_bottom = 650.0
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_vuvmf")

[node name="SegmentedHP2" parent="." instance=ExtResource("4_fje4l")]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1177.0
offset_top = 509.0
offset_right = 1215.0
offset_bottom = 590.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_iexgv")

[node name="PullReserves" type="TextureButton" parent="." groups=["Buttons"]]
layout_mode = 2
offset_left = 1217.0
offset_top = 632.0
offset_right = 1243.0
offset_bottom = 671.0
rotation = 1.57079
texture_normal = ExtResource("5_vuvmf")
texture_pressed = ExtResource("6_iexgv")
ignore_texture_size = true
stretch_mode = 0

[node name="DrawCard" type="TextureButton" parent="." groups=["Buttons"]]
layout_mode = 2
offset_left = 1042.0
offset_top = 172.0
offset_right = 1083.0
offset_bottom = 191.0
texture_normal = ExtResource("7_vuvmf")
texture_pressed = ExtResource("8_iexgv")
ignore_texture_size = true
stretch_mode = 0

[node name="Button" type="TextureButton" parent="." groups=["Buttons"]]
layout_mode = 2
offset_left = 1071.0
offset_top = 323.0
offset_right = 1097.0
offset_bottom = 368.0
size_flags_vertical = 4
theme = ExtResource("5_lleca")
texture_normal = ExtResource("4_c6mlu")
texture_pressed = ExtResource("5_flupv")
ignore_texture_size = true
stretch_mode = 0

[node name="SwitchShip" type="TextureButton" parent="." groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -398.0
offset_right = -65.0
offset_bottom = -352.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("7_vuvmf")
texture_pressed = ExtResource("8_iexgv")
ignore_texture_size = true
stretch_mode = 0

[node name="DiscardInsert" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 1041.0
offset_top = 266.0
offset_right = 1241.0
offset_bottom = 515.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lbx4b")

[node name="Control" type="Control" parent="DiscardInsert"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2

[node name="DrawInsert" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 1040.0
offset_top = 200.0
offset_right = 1243.0
offset_bottom = 449.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lbx4b")

[node name="Control" type="Control" parent="DrawInsert"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2

[node name="PlayInsert" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 1043.0
offset_top = 105.0
offset_right = 1240.0
offset_bottom = 354.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lbx4b")

[node name="Control" type="Control" parent="PlayInsert"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2

[connection signal="pressed" from="PullReserves" to="." method="_on_pull_reserves_pressed"]
[connection signal="pressed" from="DrawCard" to="." method="_on_deck_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SwitchShip" to="." method="_on_switch_ship_pressed"]
